--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-PORT=3000
-MONGO_URI=mongodb://localhost:27017/f1timer
-JWT_SECRET=your_secret_key
+MONGO_URI=mongodb+srv://heliodebreyne:12345@cluster0.yhkhvb9.mongodb.net/cluster0
